--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,30 +1,14 @@
+<section id="catalog">
+    <h1>All Movies</h1>
+    <div class="band">
 
+        {{#each movies}}
+            {{>movie}}
+        {{else}}
+        <div class="no-posts">
+            <p class="no-offer">There are no posts yet...</p>
+        </div>
+        {{/each}}
 
-            <section id="catalog">
-                <h1>All Movies</h1>
-                <div class="band">
-
-                   
-                    <!-- If there are posts for creature in the database display each of them -->
-                    {{#each movies}}
-                    <div class="flip flip-vertical">
-                        <div class="front">
-                            <img src="/img/jungle-cruise.jpeg"
-                                alt="Jungle-Cruise">
-                        </div>
-                        <div class="back">
-                            <h1>{{$title}}</h1>
-                            <h2>Genre:{{$genre}}</h2>
-                            <p>Description:{{Description}}</p>
-                            <a href="#" class="details">Details</a>
-                        </div>
-                    </div>
-                    {{/each}}
-
-                    <!-- If there are still no posts in the database display: -->
-                    <!-- <div class="no-posts">
-                        <p class="no-offer">There are no posts yet...</p>
-                    </div> -->
-                </div>
-            </section>
-     
+    </div>
+</section>
