--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,14 +9,16 @@
 </head>
 
 <body>
+
     <div id="box">
+
         <nav>
             <img src="/img/logo.webp" alt="logo">
 
             <ul class="menu">
                 <li><a href="/">Home</a></li>
-                <li><a href="/create">Create Post</a></li>
-                <li><a href="/search">Search</a></li>
+                <li><a href="/movies/create">Create Movie</a></li>
+                <li><a href="/movies/search">Search</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
 
@@ -24,7 +26,9 @@
 
 
         <main>
+
             {{{body}}}
+
         </main>
         <footer>
             © JS Back-End Workshop
