--- a/src/views/movie/details.hbs
+++ b/src/views/movie/details.hbs
@@ -9,23 +9,41 @@
                     <div class="first-info">
                         <p class="card-genre">Genre: {{movie.genre}}</p>
                         <p class="card-director">Directror: {{movie.director}}</p>
-
                     </div>
                     <div class="second-info">
-
                         <p class="card-year">Year: {{movie.year}}</p>
                         <p class="card-ranking">Rating: <span id="stars">{{showRating movie.rating}}</span></p>
                     </div>
-
                 </div>
 
                 <p class="disc">Description: {{movie.description}}</p>
                 <p class="card-category">Category: {{movie.category}}</p>
             </div>
+
+            <div>
+                <a href="/movies/{{movie.id}}/attach" class="details">Attach</a>
+            </div>
         </div>
         <div class="card_right">
             <img src="{{movie.imageUrl}}" alt="{{movie.title}}">
         </div>
+    </div>
+
+    <div class="main-cast-card">
+        {{#each movie.casts}}
+        <div class="cast-card">
+            <div class="card-img">
+                <img src="{{imageUrl}}" alt="{{name}}">
+            </div>
+            <div class="cast-info">
+                <h1>{{name}}</h1>
+                <h3>Age: {{age}}</h3>
+                <h3>Born: {{born}}</h3>
+                <h3>Name in Movie: n\a</h3>
+            </div>
+        </div>
+        {{/each}}
+    </div>
     </div>
 
 </section>
