add users user coontroller

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -21,6 +21,10 @@
                 <li><a href="/casts/create">Create Cast</a></li>
                 <li><a href="/movies/search">Search</a></li>
                 <li><a href="/about">About</a></li>
+                <li><a href="/users">login</a></li>
+                <li><a href="/users">Register</a></li>
+                <li><a href="/users">logout</a></li>
+                
             </ul>
 
         </nav>
