--- a/src/views/movie/details.hbs
+++ b/src/views/movie/details.hbs
@@ -20,9 +20,13 @@
                 <p class="card-category">Category: {{movie.category}}</p>
             </div>
 
-            <div>
+            {{#if isOwner}}
+            <div class="details-btn">
                 <a href="/movies/{{movie.id}}/attach" class="details">Attach</a>
+                <a href="/movies/{{movie.id}}/edit" class="details">Edit</a>
+                <a href="/movies/{{movie.id}}/delete" class="details">Delete</a>
             </div>
+            {{/if}}
         </div>
         <div class="card_right">
             <img src="{{movie.imageUrl}}" alt="{{movie.title}}">
