--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Catalog Page</title>
+    <title>Movie Magic{{#if pageTitle}} | {{pageTitle}}{{/if}}</title>
     <!-- Do not forget to change the path to the css file -->
     <link href="/css/style.css" type="text/css" rel="stylesheet">
 </head>
@@ -13,20 +13,26 @@
     <div id="box">
 
         <nav>
-            <img src="/img/logo.webp" alt="logo">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/13/36/film-161204_1280.png" alt="logo">
 
             <ul class="menu">
+                {{!-- All Users --}}
                 <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/movies/search">Search</a></li>
+
+                {{#if user}}
+                {{!-- Logged Users --}}
                 <li><a href="/movies/create">Create Movie</a></li>
                 <li><a href="/casts/create">Create Cast</a></li>
-                <li><a href="/movies/search">Search</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/users">login</a></li>
-                <li><a href="/users">Register</a></li>
-                <li><a href="/users">logout</a></li>
-                
+                <li><a href="/users/logout">Logout</a></li>
+                <span style="color:orange;">{{user.email}}</span>
+                {{else}}
+                {{!-- Guest Users --}}
+                <li><a href="/users/login">Login</a></li>
+                <li><a href="/users/register">Register</a></li>
+                {{/if}}
             </ul>
-
         </nav>
 
 
