set page title from view

--- a/src/views/movie/edit.hbs
+++ b/src/views/movie/edit.hbs
@@ -13,14 +13,12 @@
                             </li>
                             <li>
                                 <label for="category">Category:</label>
-                                <select id="category" class="inputFields" name="category">
-                                    <option value="">Select Category</option>
-                                    <option value="tv-show" >TV Show</option>
-                                    <option value="animation">Animation</option>
-                                    <option value="movie" selected>Movie</option>
-                                    <option value="documentary">Documentary</option>
-                                    <option value="short-film">Short Film</option>
-                                </select>
+                    <select id="category" class="inputFields" name="category">
+                        <option value="">Select Category</option>
+                        {{#each categoryOptions}}
+                        <option value="{{value}}" {{selected}}>{{title}}</option>
+                        {{/each}}
+                    </select>
                             </li>
                             <li>
                                 <label for="genre">Genre:</label>
